More theme fixes, and change button color so it's readable on the default theme.

--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -295,6 +295,9 @@ div._4-i2, div._5a8u, ._4t2a {
 ._3v_p ._3v_w ._2m_r, ._3v_p ._5s4n ._2m_r {
 	background-color: #0066aa !important;
 }
+#loginbutton {
+	background-color: transparent !important;
+}
 
 /* call page */
 ._17cj, ._17cj ._3jne {
